manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: routing-poc
    labels:
        name: routing-poc
