manifests/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*.http.scratchpad.xyz"
  - port:
      number: 50051
      name: grpc-plaintext
      protocol: GRPC
    hosts:
      - "*.grpc.scratchpad.xyz"
