manifests/grpc.goodbye.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-goodbye
  labels:
    app: grpc-goodbye
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-goodbye
  template:
    metadata:
      labels:
        app: grpc-goodbye
    spec:
      containers:
      - name: grpc-goodbye
        image: codingconcepts/grpc-goodbye
        ports:
          - name: grpc-goodbye
            containerPort: 50051
            protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: grpc-goodbye
spec:
  selector:
    app: grpc-goodbye
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-goodbye
spec:
  hosts:
  - goodbye.grpc.scratchpad.xyz
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: grpc-goodbye.routing-poc.svc.cluster.local
        port:
          number: 50051
